examples/errors/parsing/if-no-then.cn
main : () [impure] =
  if true 1 else 2
